Update music strings

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -461,7 +461,7 @@
 "my_friends" = "Мої Друзі";
 "my_photos" = "Мої Фотографії";
 "my_videos" = "Мої Відеозаписи";
-"audios" = "Мої Аудіозаписи";
+"my_audios" = "Мої Аудіозаписи";
 "my_messages" = "Мої Повідомлення";
 "my_notes" = "Мої Нотатки";
 "my_groups" = "Мої Групи";
@@ -698,7 +698,7 @@
 
 "limits" = "Ліміти";
 "select_audio" = "Оберіть аудіо з вашого пристрою";
-"audio_requirements" = "Аудіо має тривати від $1s до $2 minutes, важити до $3MB та мати аудіопотік.";
+"audio_requirements" = "Аудіо має тривати від $1с до $2 хвилин, важити до $3MB та мати аудіопотік.";
 "audio_requirements_2" = "Аудіо не має порушувати авторські права";
 "you_can_also_add_audio_using" = "Ви також можете додати аудіо з числа вже завантажених файлів за допомогою";
 "search_audio_inst" = "пошуку аудіо";
@@ -721,7 +721,7 @@
 "my_music" = "Моя музика";
 "music_user" = "Музика користувача";
 "music_club" = "Аудіозапис спільноти";
-"audio_new" = "Новий";
+"audio_new" = "Нове";
 "audio_popular" = "Популярні";
 "audio_search" = "Пошук";
 
@@ -743,7 +743,7 @@
 "no_audios_user" = "Цей користувач не додав жодного аудіо.";
 "no_audios_club" = "Ця група не додала жодного аудіо.";
 
-"new_playlist" = "Новий плейлист";
+"new_playlist" = "Створити плейлист";
 "created_playlist" = "створений";
 "updated_playlist" = "оновлений";
 "bookmark" = "Додати до колекції";
