--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -685,7 +685,7 @@
 
 "audios" = "Аудіозаписи";
 "audio" = "Аудіо";
-"playlist" = "Плейлист";
+"playlist" = "Список відтворення";
 "upload_audio" = "Завантажити аудіо";
 "upload_audio_to_group" = "Завантажити аудіо у групу";
 
@@ -726,8 +726,8 @@
 "audio_search" = "Пошук";
 
 "my_audios_small" = "Мої аудіозаписи";
-"my_playlists" = "Мій плейлист";
-"playlists" = "Плейлист";
+"my_playlists" = "Мій список відтворення";
+"playlists" = "Списки відтворення";
 "audios_explicit" = "Має нецензурну лексику";
 "withdrawn" = "Вилучено";
 "deleted" = "Видалено";
@@ -735,15 +735,15 @@
 "searchable" = "Доступно у пошуку";
 
 "select_audio" = "Оберіть аудіо";
-"no_playlists_thisuser" = "Ви ще не додали жодного плейлиста.";
-"no_playlists_user" = "Цей користувач ще не додав жодного плейлиста.";
-"no_playlists_club" = "Ця група не додала жодного плейлиста.";
+"no_playlists_thisuser" = "Ви ще не додали жодного списку відтворення.";
+"no_playlists_user" = "Цей користувач ще не додав жодного списка відтворення.";
+"no_playlists_club" = "Ця група не додала жодного списку відтворення.";
 
 "no_audios_thisuser" = "Ви ще не додали жодного аудіо.";
 "no_audios_user" = "Цей користувач не додав жодного аудіо.";
 "no_audios_club" = "Ця група не додала жодного аудіо.";
 
-"new_playlist" = "Створити плейлист";
+"new_playlist" = "Створити список відтворення";
 "created_playlist" = "створений";
 "updated_playlist" = "оновлений";
 "bookmark" = "Додати до колекції";
@@ -759,13 +759,13 @@
 "show_more_audios" = "Показати більше аудіо";
 "add_to_playlist" = "Додати до списку відтворення";
 "remove_from_playlist" = "Видалити зі списку відтворення";
-"delete_playlist" = "Видалити плейлист";
-"playlist_cover" = "Обкладинка плейлиста";
+"delete_playlist" = "Видалити список відтворення";
+"playlist_cover" = "Обкладинка списку відтворення";
 
-"playlists_user" = "Плейлисти користувачів";
+"playlists_user" = "Список відтворення користувачів";
 "playlists_club" = "Списки відтворення груп";
 "change_cover" = "Змінити обкладинку";
-"playlist_cover" = "Обкладинка плейлиста";
+"playlist_cover" = "Обкладинка списку відтворення";
 
 "minutes_count_zero" = "триває менше ніж хвилину";
 "minutes_count_one" = "триває одну хвилину";
