Update LIP Belorussian

--- a/locales/by.strings
+++ b/locales/by.strings
@@ -257,11 +257,13 @@
 "my_friends" = "Мае Сябры";
 "my_photos" = "Мае Фотаздымкі";
 "my_videos" = "Мае Відэазапісы";
+"my_audios" = "Мае Аўдыёзапісы";
 "my_messages" = "Мае Паведамленні";
 "my_notes" = "Мае Нататкі";
 "my_groups" = "Мае Групы";
 "my_feed" = "Мае Навіны";
 "my_feedback" = "Мае Адказы";
+"my_apps" = "Прыкладанні";
 "my_settings" = "Мае Налады";
 "bug_tracker" = "Баг-трэкер";
 
