--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1841,7 +1841,7 @@
 "mobile_friends" = "Друзі";
 "mobile_photos" = "Фотографії";
 "mobile_videos" = "Відеозаписи";
-"mobile_audios" = "Аудіо";
+"mobile_audios" = "Аудіозаписи";
 "mobile_messages" = "Повідомлення";
 "mobile_notes" = "Нотатки";
 "mobile_groups" = "Групи";
