--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -461,7 +461,7 @@
 "my_friends" = "Мої Друзі";
 "my_photos" = "Мої Фотографії";
 "my_videos" = "Мої Відеозаписи";
-"audios" = "Мої Аудіозаписи";
+"my_audios" = "Мої Аудіозаписи";
 "my_messages" = "Мої Повідомлення";
 "my_notes" = "Мої Нотатки";
 "my_groups" = "Мої Групи";
@@ -685,7 +685,7 @@
 
 "audios" = "Аудіозаписи";
 "audio" = "Аудіо";
-"playlist" = "Плейлист";
+"playlist" = "Список відтворення";
 "upload_audio" = "Завантажити аудіо";
 "upload_audio_to_group" = "Завантажити аудіо у групу";
 
@@ -698,7 +698,7 @@
 
 "limits" = "Ліміти";
 "select_audio" = "Оберіть аудіо з вашого пристрою";
-"audio_requirements" = "Аудіо має тривати від $1s до $2 minutes, важити до $3MB та мати аудіопотік.";
+"audio_requirements" = "Аудіо має тривати від $1с до $2 хвилин, важити до $3MB та мати аудіопотік.";
 "audio_requirements_2" = "Аудіо не має порушувати авторські права";
 "you_can_also_add_audio_using" = "Ви також можете додати аудіо з числа вже завантажених файлів за допомогою";
 "search_audio_inst" = "пошуку аудіо";
@@ -713,7 +713,7 @@
 "audios_count_one" = "Один аудіозапис";
 "audios_count_few" = "$1 аудіозаписів";
 "audios_count_many" = "$1 аудіозаписів";
-"audios_count_other" = "$1 аудіозапис";
+"audios_count_other" = "$1 аудіозаписів";
 
 "track_unknown" = "Невідомий";
 "track_noname" = "Без назви";
@@ -721,13 +721,13 @@
 "my_music" = "Моя музика";
 "music_user" = "Музика користувача";
 "music_club" = "Аудіозапис спільноти";
-"audio_new" = "Новий";
+"audio_new" = "Нове";
 "audio_popular" = "Популярні";
 "audio_search" = "Пошук";
 
 "my_audios_small" = "Мої аудіозаписи";
-"my_playlists" = "Мій плейлист";
-"playlists" = "Плейлист";
+"my_playlists" = "Мій список відтворення";
+"playlists" = "Списки відтворення";
 "audios_explicit" = "Має нецензурну лексику";
 "withdrawn" = "Вилучено";
 "deleted" = "Видалено";
@@ -735,15 +735,15 @@
 "searchable" = "Доступно у пошуку";
 
 "select_audio" = "Оберіть аудіо";
-"no_playlists_thisuser" = "Ви ще не додали жодного плейлиста.";
-"no_playlists_user" = "Цей користувач ще не додав жодного плейлиста.";
-"no_playlists_club" = "Ця група не додала жодного плейлиста.";
+"no_playlists_thisuser" = "Ви ще не додали жодного списку відтворення.";
+"no_playlists_user" = "Цей користувач ще не додав жодного списка відтворення.";
+"no_playlists_club" = "Ця група не додала жодного списку відтворення.";
 
 "no_audios_thisuser" = "Ви ще не додали жодного аудіо.";
 "no_audios_user" = "Цей користувач не додав жодного аудіо.";
 "no_audios_club" = "Ця група не додала жодного аудіо.";
 
-"new_playlist" = "Новий плейлист";
+"new_playlist" = "Створити список відтворення";
 "created_playlist" = "створений";
 "updated_playlist" = "оновлений";
 "bookmark" = "Додати до колекції";
@@ -759,13 +759,13 @@
 "show_more_audios" = "Показати більше аудіо";
 "add_to_playlist" = "Додати до списку відтворення";
 "remove_from_playlist" = "Видалити зі списку відтворення";
-"delete_playlist" = "Видалити плейлист";
-"playlist_cover" = "Обкладинка плейлиста";
+"delete_playlist" = "Видалити список відтворення";
+"playlist_cover" = "Обкладинка списку відтворення";
 
-"playlists_user" = "Плейлисти користувачів";
+"playlists_user" = "Список відтворення користувачів";
 "playlists_club" = "Списки відтворення груп";
 "change_cover" = "Змінити обкладинку";
-"playlist_cover" = "Обкладинка плейлиста";
+"playlist_cover" = "Обкладинка списку відтворення";
 
 "minutes_count_zero" = "триває менше ніж хвилину";
 "minutes_count_one" = "триває одну хвилину";
@@ -1841,7 +1841,7 @@
 "mobile_friends" = "Друзі";
 "mobile_photos" = "Фотографії";
 "mobile_videos" = "Відеозаписи";
-"mobile_audios" = "Аудіо";
+"mobile_audios" = "Аудіозаписи";
 "mobile_messages" = "Повідомлення";
 "mobile_notes" = "Нотатки";
 "mobile_groups" = "Групи";
