--- a/locales/en.strings
+++ b/locales/en.strings
@@ -72,9 +72,10 @@
 "change_status" = "change status";
 "name" = "Name";
 "surname" = "Surname";
-"gender" = "Sex";
-"male" = "male";
-"female" = "female";
+"pronouns" = "Pronouns";
+"male" = "he/him";
+"female" = "she/her";
+"neutral" = "they/them";
 "description" = "Description";
 "save" = "Save";
 "main_information" = "Main information";
@@ -171,8 +172,10 @@
 "post_writes_g" = "published";
 "post_deact_m" = "deleted his profile saying:";
 "post_deact_f" = "deleted her profile saying:";
+"post_deact_g" = "deleted they profile saying:";
 "post_deact_silent_m" = "silently deleted his profile.";
 "post_deact_silent_f" = "silently deleted her profile.";
+"post_deact_silent_f" = "silently deleted they profile.";
 "post_on_your_wall" = "on your wall";
 "post_on_group_wall" = "in $1";
 "post_on_user_wall" = "on $1's wall";
