improve(locale-ru): Correct spelling for `audio_requirements`

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -789,7 +789,7 @@
 
 "limits" = "Ограничения";
 "select_audio" = "Выберите аудиозапись на Вашем компьютере";
-"audio_requirements" = "Аудиозапись должна быть длинной от $1c до $2 минут, весить до $3мб и содержать аудиопоток.";
+"audio_requirements" = "Аудиозапись должна быть длиной от $1 cекунд до $2 минут и размером до $3 МБ, а также должна содержать аудиопоток.";
 "audio_requirements_2" = "Аудиозапись не должна нарушать авторские и смежные права.";
 "you_can_also_add_audio_using" = "Вы также можете добавить аудиозапись из числа уже загруженных файлов, воспользовавшись";
 "search_audio_inst" = "поиском по аудио";
