feat(profiles): add ability to crop avatar
Closes #1068 and maybe slash 106

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -452,14 +452,14 @@
 "formats_avatar" = "Вы можете загрузить изображение в формате JPG, GIF или PNG.";
 "troubles_avatar" = "Если возникают проблемы с загрузкой, попробуйте выбрать фотографию меньшего размера.";
 "webcam_avatar" = "Если ваш компьютер оснащён веб-камерой, Вы можете <a href='javascript:'>сделать моментальную фотографию »</a>";
+"publish_on_wall" = "Опубликовать запись на стене";
 
-"update_avatar_notification" = "Фотография профиля обновлена";
-"update_avatar_description" = "Нажмите сюда, чтобы перейти к просмотру";
+"selected_area_user" = "Выбранная область будет показываться на вашей странице.";
+"selected_area_club" = "Выбранная область будет показываться на странице сообщества.";
+"selected_area_rotate" = "Если изображение ориентировано неправильно, фотографию можно повернуть.";
 
 "deleting_avatar" = "Удаление фотографии";
 "deleting_avatar_sure" = "Вы действительно хотите удалить аватар?";
-
-"deleted_avatar_notification" = "Фотография успешно удалена";
 
 "save_changes" = "Сохранить изменения";
 
