add ability to take avatar photo from camera
почему бы и нет

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -451,8 +451,10 @@
 "groups_avatar" = "Хорошее фото сделает Ваше сообщество более узнаваемым.";
 "formats_avatar" = "Вы можете загрузить изображение в формате JPG, GIF или PNG.";
 "troubles_avatar" = "Если возникают проблемы с загрузкой, попробуйте выбрать фотографию меньшего размера.";
-"webcam_avatar" = "Если ваш компьютер оснащён веб-камерой, Вы можете <a href='javascript:'>сделать моментальную фотографию »</a>";
+"webcam_avatar" = "Если ваш компьютер оснащён веб-камерой, Вы можете <a id='_takeSelfie'>сделать моментальную фотографию »</a>";
 "publish_on_wall" = "Опубликовать запись на стене";
+"take_snapshot" = "Сделать снимок";
+"your_browser_doesnt_support_webcam" = "Ваш браузер не поддерживает съёмку видео с веб-камеры.";
 
 "selected_area_user" = "Выбранная область будет показываться на вашей странице.";
 "selected_area_club" = "Выбранная область будет показываться на странице сообщества.";
