--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1919,7 +1919,7 @@
 "tour_section_11_text_2" = "Some new users might find the current default theme a bit dated.";
 "tour_section_11_text_3" = "<b>No worries:</b> You can create your own theme by reading the <a href='https://docs.ovk.to/'>documentation</a> or choose one from the catalog.";
 "tour_section_11_bottom_text_1" = "A catalog of themes is available under \"My Settings\" in the \"Interface\" tab.";
-"tour_section_11_wordart" = "<img src='https://ovk.to/assets/packages/static/openvk/img/tour/wordart_en.png' width='65%'>";
+"tour_section_11_wordart" = "<img src='/assets/packages/static/openvk/img/tour/wordart_en.png' width='65%'>";
 
 "tour_section_12_title_1" = "Profile and Group Backgrounds";
 "tour_section_12_text_1" = "You can set two images as the background of your page.";
