--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1811,7 +1811,7 @@
 "tour_section_11_text_2" = "Некоторых новых пользователей может слегка отпугнуть нынешняя стоковая тема, которая веет совсем уж древностью";
 "tour_section_11_text_3" = "<b>Но не беда:</b> Вы можете создать свою тему для сайта, ознакомившись с <a href='https://docs.ovk.to/'>документацией</a> или выбрать уже существующую из каталога";
 "tour_section_11_bottom_text_1" = "Каталог тем доступен в разделе &quot;Мои Настройки&quot; во вкладке &quot;Интерфейс&quot; ";
-"tour_section_11_wordart" = "<img src='https://ovk.to/assets/packages/static/openvk/img/tour/wordart.png' width='65%'>";
+"tour_section_11_wordart" = "<img src='/assets/packages/static/openvk/img/tour/wordart.png' width='65%'>";
 
 "tour_section_12_title_1" = "Фон профиля и группы";
 "tour_section_12_text_1" = "Вы можете установить два изображения в качестве фона вашей страницы";
