locales: English: fix confusing labels in the repost modal
Clarified modal phrasing when reposting a user's post. The previous wording, 'Share to user's wall,' was ambiguous and could be interpreted as either sharing to your own wall or the original user's wall. Updated the language to make it clear that the post will be shared to your wall.

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -204,8 +204,8 @@
 "comments_tip" = "Be the first to leave a comment on this post!";
 "your_comment" = "Your comment";
 "auditory" = "Auditory";
-"in_wall" = "to user's wall";
-"in_group" = "to group";
+"in_wall" = "to my wall";
+"in_group" = "to a group";
 "shown" = "Shown";
 "x_out_of" = "$1 of";
 "wall_zero" = "no posts";
