--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -621,6 +621,7 @@
 "search_for_apps" = "Поиск приложений";
 "search_for_notes" = "Поиск записок";
 "search_for_audios" = "Поиск музыки";
+"search_for_audios_playlists" = "Поиск плейлистов";
 "search_button" = "Найти";
 "search_placeholder" = "Начните вводить любое имя, название или слово";
 "results_zero" = "Ни одного результата";
@@ -904,6 +905,7 @@
 "repeat_tip" = "Повторение";
 "shuffle_tip" = "Перемешать";
 "mute_tip" = "Заглушить";
+"playlist_hide_from_search" = "Не показывать в поиске";
 
 /* Notifications */
 
